<resources xmlns="http://schemas.android.com/tools">
    <string name="app_name">Pleinbioscoop</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Pleinbioscoop</string>
    <string name="title_activity_film">Pleinbioscoop</string>
    <string-array name="movies">
        <item>wo 12\t– Whiplash</item>
        <item>do 13\t\t– Frank</item>
        <item>vr 14\t\t\t– The Imitation Game</item>
        <item>za 15\t\t– Chef</item>
        <item>zo 16\t\t– Tussen 10 en 12</item>
        <item>ma 17\t– Pride</item>
        <item>di 18\t\t\t– Sergio Herman: Fucking Perfect</item>
        <item>wo 19\t– White God</item>
        <item>do 20\t\t– Indiana Jones and the Temple of Doom</item>
        <item>vr 21\t\t\t– Guardians of the Galaxy</item>
        <item>za 22\t\t– Birdman</item>
        <item>zo 23\t\t– Meraviglie</item>
        <item>ma 24\t– Still Alice</item>
        <item>di 25\t\t\t– Turist</item>
        <item>wo 26\t– Foxcatcher</item>
        <item>do 27\t\t– Taxi Driver</item>
        <item>vr 28\t\t\t– Wild</item>
        <item>za 29\t\t– Gone Girl</item>
        <item>zo 30\t\t– Love is Strange</item>
    </string-array>
    <string-array name="dates">
        <item>wo 12</item>
        <item>do 13</item>
        <item>vr 14</item>
        <item>za 15</item>
        <item>zo 16</item>
        <item>ma 17</item>
        <item>di 18</item>
        <item>wo 19</item>
        <item>do 20</item>
        <item>vr 21</item>
        <item>za 22</item>
        <item>zo 23</item>
        <item>ma 24</item>
        <item>di 25</item>
        <item>wo 26</item>
        <item>do 27</item>
        <item>vr 28</item>
        <item>za 29</item>
        <item>zo 30</item>
    </string-array>
    <string-array name="fulldates">
        <item>wo 12 augustus</item>
        <item>do 13 augustus</item>
        <item>vr 14 augustus</item>
        <item>za 15 augustus</item>
        <item>zo 16 augustus</item>
        <item>ma 17 augustus</item>
        <item>di 18 augustus</item>
        <item>wo 19 augustus</item>
        <item>do 20 augustus</item>
        <item>vr 21 augustus</item>
        <item>za 22 augustus</item>
        <item>zo 23 augustus</item>
        <item>ma 24 augustus</item>
        <item>di 25 augustus</item>
        <item>wo 26 augustus</item>
        <item>do 27 augustus</item>
        <item>vr 28 augustus</item>
        <item>za 29 augustus</item>
        <item>zo 30 augustus</item>
    </string-array>
    <string-array name="titles">
        <item>Whiplash</item>
        <item>Frank</item>
        <item>The Imitation Game</item>
        <item>Chef</item>
        <item>Tussen 10 en 12</item>
        <item>Pride</item>
        <item>Sergio Herman: Fucking Perfect</item>
        <item>White God</item>
        <item>Indiana Jones and the Temple of doom</item>
        <item>Guardians of the Galaxy</item>
        <item>Birdman</item>
        <item>Meraviglie</item>
        <item>Still Alice</item>
        <item>Turist</item>
        <item>Foxcatcher</item>
        <item>Taxi Driver</item>
        <item>Wild</item>
        <item>Gone Girl</item>
        <item>Love is Strange</item>
    </string-array>
    <string-array name="info">
        <item>VS, 2014, 107 min, Audio: ENG Subs: NL</item>
        <item>(UK, 2014, 95 min, Audio: ENG Subs: NL)</item>
        <item>(UK, 2014, 114 min, Audio: ENG, Subs: NL)</item>
        <item>(VS, 2014, 114 min, Audio: ENG Subs: NL)</item>
        <item>(NL, 2014, 71 min, Audio: NL, No Subs)</item>
        <item>(UK, 2014, 119 min, Audio: ENG, Subs: NL)</item>
        <item>(NL, 2015, 90 min, Audio: NL, No Subs)</item>
        <item>(HON, 2014, 121 min, Audio: HONG, Subs: NL)</item>
        <item>(VS, 1984, 118 min, Audio: ENG, Subs: NL)</item>
        <item>(VS, 2014, 121 min, Audio: ENG, Subs: NL)</item>
        <item>(VS, 2014, 119 min, Audio: ENG, Subs: NL)</item>
        <item>(IT, 2014, 110 min, Audio: IT, Subs: NL)</item>
        <item>(VS, 2014, 101 min, Audio: ENG, Subs: NL)</item>
        <item>(ZW, 2014, 120 min, Audio: SW, Subs: NL)</item>
        <item>(VS, 2014, 134 min, Audio: ENG, Subs: NL)</item>
        <item>(VS, 1976, 113 min, Audio: ENG, Subs: NL)</item>
        <item>(VS, 2014, 115 min, Audio: ENG, Subs: NL)</item>
        <item>(VS, 2014, 149 min, Audio: ENG, Subs: NL)</item>
        <item>(VS, 2014, 94 min, Audio: ENG, Subs: NL)</item>
    </string-array>
    <string-array name="plot">
        <item>De ambitieuze muziekstudent Andrew (Miles Teller) drumt alsof zijn leven ervan afhangt in het intense muziekdrama Whiplash. J.K. Simmons won een Oscar voor zijn rol als enge muziekleraar.</item>
        <item>Jonge Ierse muzikant krijgt de kans van zijn leven als hij mag invallen bij een hippe band met een nogal vreemde zanger. Dwarse, lieve komedie met (waarschijnlijk) Michael Fassbender.</item>
        <item>Het tumultueze leven van wiskundige Alan Turing, een oorlogsheld die nooit de eer kreeg die hij verdiende. Fraaie hoofdrol van Benedict Cumberbatch.</item>
        <item>Na een serie mislukkingen gooit topkok Carl zijn leven over een andere boeg en koopt een oude foodtruck. Fijne feelgood-film voor foodies, ook met Scarlett Johansson en Sofia Vergara.</item>
        <item>Twee agenten bellen aan met slecht nieuws. Zo begint dit sterke, ontroerende Nederlandse speelfilmdebuut, dat laat zien hoe het een Rotterdams gezin daarna vergaat.</item>
        <item>homoactivisten uit Londen neemt het op voor de stakende mijnwerkers in het noorden. Vrolijk stemmende ensemblefilm over love en (gay) pride en prejudice.</item>
        <item>Energieke documentaire over turbo-topkok Sergio Herman. Hij sluit zijn driesterrenrestaurant Oud Sluis omdat hij het rustiger aan wil doen. Maar of dat lukt?</item>
        <item>Een verbluffende, eigenzinnige mix van genres. Wat begint als een melodrama over een meisje dat haar hond kwijtraakt, eindigt in onvervalste honden-horror.</item>
        <item>India, 1935: een heilige steen, een griezelige tempel. Hoe het allemaal begon in Spielbergs onverwoestbaar amusante Indy Jones-serie.</item>
        <item>Van de vele superheldenfilms van de laatste jaren is dit een van de vermakelijkste. Een wasbeer, een groene vrouw, een wandelende boom en Chris Pratt vechten samen tegen intergalactisch gespuis.</item>
        <item>De grote Oscarwinnaar van dit jaar is een virtuoos drama over een ooit beroemde acteur die zijn carrière probeert op te peppen. Met Michael Keaton en Edward Norton.</item>
        <item>Dromerig zomers drama met de Italiaanse sterren Alba Rohrwacher en Monica Bellucci. Op het Italiaanse platteland probeert een familie zelfvoorzienend te leven. De oudste dochter begint te puberen.</item>
        <item>Taalprofessor Alice (Julianne Moore, bekroond met een Oscar) verliest langzaam de grip op zichzelf en de wereld om haar heen. Aangrijpend gezinsdrama over de gevolgen van Alzheimer.</item>
        <item>Red je bij een ramp eerst jezelf en je telefoon, of je kinderen en je vrouw? In theorie geen moeilijke vraag, maar het praktijkvoorbeeld pakt in deze vlijmscherpe Zweedse komedie lastiger uit.</item>
        <item>Het intrigerende, waargebeurde verhaal van twee sportieve broers en hun excentrieke coach. Met fantastisch acteerwerk van Channing Tatum en Mark Ruffalo.</item>
        <item>‘You talkin’ to me?’ Scorsese’s magnifieke grotestads-psychothriller, vertoond op 35mm.</item>
        <item>Knap, geestig en soms pijnlijk wildernisdrama gebaseerd op de memoires van Cheryl Strayed (Reese Witherspoon), die zonder voorbereiding een wandeltocht van 1700 kilometer onderneemt.</item>
        <item>IJzersterke thriller naar de bestseller van Gillian Flynn. Hoe een fijn huwelijk ontaardt in een bloederige puinhoop. Met Ben Affleck en Rosamund Pike.</item>
        <item>Een onderschat pareltje, dit mooie drama over het New-Yorkse stel Ben (John Lithgow) en George (Alfred Molina). Ze zijn al eeuwen samen, kunnen eindelijk trouwen, en dan gaat het mis.</item>
    </string-array>
    <string-array name="muziek">
        <item>Live Muziek: \nDJ Marco Broere + Openingsact Arend Niks</item> 
        <item>Live Muziek: \nPlastic Fantastic Timemachine</item>
        <item>Live Muziek: \nLaf</item>
        <item>Live Muziek: \nWillow Mae</item> 
        <item>Vooraf aan deze film helaas geen live muziek</item>
        <item>Live Muziek: \nDagobah Soundsystem</item>
        <item>Live Muziek: \nprogrammering door de Dag van de Romantische Muziek</item>
        <item>Vooraf aan deze film helaas geen live muziek</item>
        <item>Live Muziek: \nSibe Kokke Experience</item>
        <item>Live Muziek: \nPleinbioscoop Meets Deaf Culture Speciaal Programma</item> 
        <item>Live Muziek: \nThree/Third</item> 
        <item>Live Muziek: \nMaurice van Hoek</item>
        <item>Vooraf aan deze film helaas geen live muziek</item>
        <item>Live Muziek: \nNathan Ignacio</item>
        <item>Live Muziek: \nThe Maybellenes</item>
        <item>Vooraf aan deze film helaas geen live muziek</item>
        <item>Live Muziek: \nReal Men Ain’t Pretty</item>
        <item>Live Muziek: \nStijn en Paul</item>
        <item>Live Muziek: \nDe B-Kant</item>
    </string-array>
    <string name="tickets">Tickets</string>
    <string name="stoeltjes">Stoeltjes</string>
    <string name="drank">Drank</string>
    <string name="openingstijden">Openingstijden</string>
    <string name="organisatie">Organisatie</string>
    <string name="stoeltjes_detail">
            Bezoekers kunnen een stoel huren voor 1,- euro (er zijn genoeg stoelen aanwezig) of mogen een eigen stoel meenemen.
            Vroege vogels kunnen een van de al aanwezige zitplaatsen claimen.
            Er zijn dekens beschikbaar op het terrein tegen een borg van 10,- euro.
            We raden aan om voor de koelere avonduren extra kleding mee te nemen.
    </string>
    <string name="drank_det">
            Er is een groot aanbod aan eten en drinken aanwezig op het terrein. Eigen eten en drinken mag mee, maar mag, om veiligeheidsredenen niet in glas zijn verpakt.
    </string>
    <string name="openingstijden_det">
            Het terrein is geopend om 19:00 uur, dan kun je dineren en live muziek beluisteren.\n
            \nStart filmprogramma inclusief korte film om 21:15 uur.\n
            \nEr is geen pauze in de film.\n
            \nMet name in de eerste dagen zal de film iets later moeten starten i.v.m. de zonsondergang, want pas in het donker is de film goed te zien. Het terrein sluit om middernacht.
    </string>
    <string name="organisatie_dat">
            De Pleinbioscoop Rotterdam 2015 wordt georganiseerd door Stichting Pleinbioscoop Rotterdam:\n
            \nZakelijk Leider: Joost Maaskant\n
            \nProjectleider: Randi de Vries\n
            \nProgrammeur: Pauline Kleijer\n
            \nMarketing en Communicatie + Speciale Projecten: Nikki Kamps\n
            \nVormgeving: HuffenReuter Beeld en Boodschap\n
            \nWebsite: Tanja Stomp\n
            \nVrijwilligers: Thomas en Thomas\n
            \nHoreca en Stoeltjescollectief: Hannah Abbink\n
            \nFondsenwerving: Ineke Kruizinga en Mirijam Neve\n
            \nCurator Korte Film Competitie En Plein Public: Erwin Houtenbrink\n
            \nPersbenadering: Femke Cuijpers/Creatieve Kwesties\n
            \nApp: Arno Huisman en Thomas Abbink
    </string>
</resources>