<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <!-- Layout for stoeltjes title/detail pair  -->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                style="@style/info_title_container">

                <ImageView
                    style="@style/info_chevron"/>

                <TextView
                    style="@style/info_title"
                    android:text="@string/stoeltjes" />

            </LinearLayout>

            <TextView
                style="@style/info_details"
                android:text="@string/stoeltjes_detail" />

        </LinearLayout>

        <!-- Layout for openingstijden title/detail pair  -->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                style="@style/info_title_container">

                <ImageView
                    style="@style/info_chevron"/>

                <TextView
                    style="@style/info_title"
                    android:text="@string/openingstijden"/>

            </LinearLayout>

            <TextView
                style="@style/info_details"
                android:text="@string/openingstijden_det" />

        </LinearLayout>

        <!-- Layout for drank title/detail pair  -->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                style="@style/info_title_container">

                <ImageView
                    style="@style/info_chevron"/>

                <TextView
                    style="@style/info_title"
                    android:text="@string/drank" />

            </LinearLayout>

            <TextView
                style="@style/info_details"
                android:text="@string/drank_det" />

        </LinearLayout>

        <!-- Layout for tickets title/detail pair  -->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                style="@style/info_title_container">

                <ImageView
                    style="@style/info_chevron"/>

                <TextView
                    style="@style/info_title"
                    android:text="@string/tickets"  />

            </LinearLayout>

            <TextView
                style="@style/info_details"
                android:text="@string/tickets_det" />

        </LinearLayout>

        <!-- Layout for organisation title/detail pair  -->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                style="@style/info_title_container">

                <ImageView
                    style="@style/info_chevron" />

                <TextView
                    style="@style/info_title"
                    android:text="@string/organisatie"  />

            </LinearLayout>

            <TextView
                style="@style/info_details"
                android:text="@string/organisatie_dat" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>